css/index.styl
@import './mixin'

#chart
  width: 960px
  height: 480px
  background-color: #fff

.input-tiny
  width: 40px

.chart-form
  monospace()
  font-size: 16px

.chart-form select 
  monospace()
  font-size: 16px

.chart-form input
  monospace()

.typeahead.dropdown-menu li
  monospace()
  font-size: 12px

.chart-actions
  float: right
  text-align: right
  display: inline
  //margin-top: 20px

.navbar small
  font-size: 18px
  margin-left: 8px
  margin-right: 8px

.date-picker
  margin: 0 9px 0 0

.btn-xlarge
  font-size: 24px
  font-weight: bold
  padding: 13px 24px

.sprint-action
  padding-top: 200px
  text-align: left
  border-radius('18')

.team-select-header
  padding-top: 50px

.team-select-form
  padding-top: 50px

.team-select
  monospace()

.chart-form .combobox-container .dropdown-toggle
  height: 14px
  display: none

.team-form .combobox-container .btn
  height: 20px

.team-form .combobox-container .caret
  margin-top: 8px

.team-form .combobox-container .btn
  vertical-align: top

.datePicker-container
  width: auto;
  min-width: 16px;
  height: 14px;
  margin-right: 0
  margin-left: -1px
  padding: 4px 5px;
  font-weight: normal;
  line-height: 18px;
  color: #999999;
  text-align: center;
  text-shadow: 0 1px 0 #ffffff;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  -webkit-border-radius: 0 3px 3px 0;
  -moz-border-radius: 0 3px 3px 0;
  border-radius: 0 3px 3px 0;

.datePicker-container:hover
  border: 1px solid #ccc;

.datePicker-container i
  margin-top: -11px

.datePicker-inline
  margin-top: -9px
  margin-left: 9px
  height: 16px
  padding: 2px
  border-radius(2px)

.datePicker-inline i
  margin-top: -28px

.sprint-action .error
  border-color: darkred

@media print
  .navbar,.container,ul
    display: none
  svg
    display: block
    top: 100px !important
    left: 2% !important

@page 
  size: A4 landscape

